日本語版について追記

--- a/index.html
+++ b/index.html
@@ -55,3 +55,23 @@ layout: default
     </ul>
   </p>
 </section>
+<section>
+  <h1>日本語版について</h1>
+  <p>
+    本サイトは、英語版の公式サイトを有志によって日本語に翻訳したものです。
+    <br>
+    翻訳についてのお問い合わせは、Crystal-JP の GitHub レポジトリまでお願いします。
+    <ul class='goals'>
+      <li>
+        <a href='https://github.com/crystal-jp/ja.crystal-lang.org'>
+          Crystal-JP 日本語翻訳プロジェクト
+        </a>
+      </li>
+      <li>
+        <a href='http://crystal-lang.org/'>
+          Crystal 翻訳元サイト [英語]
+        </a>
+      </li>
+    </ul>
+  </p>
+</section>
