--- a/locale/ja/crystal-website/index.html
+++ b/locale/ja/crystal-website/index.html
@@ -7,7 +7,7 @@ custom_body_classes:
 
 <div class="banner center sponsorship no-select">
   <div class="flag">
-    production-readyに向けてファンドをお願いします: 
+    production-readyに向けて支援をお願いします: 
     <div class="flag-logos">
       <a href="https://opencollective.com/crystal-lang" target="_blank">
         <img src="{{ 'oc.png' | asset_path }}" class="oc-logo">
@@ -163,7 +163,7 @@ custom_body_classes:
   <hr class="fullwidth">
   <div class="row">
     <div class="col s12">
-      <h2>ブログ記事 (ほとんど未翻訳です)</h2>
+      <h2>ブログ記事 (未翻訳のものがあります)</h2>
       
       {% assign articles = site.posts | where_exp: "item","item.release_notes != true" %}
       {% for post in articles limit: 3 %}
