feat(website): add translated pages

--- a/locale/ja/crystal-website/docs.html
+++ b/locale/ja/crystal-website/docs.html
@@ -3,6 +3,7 @@ title: ドキュメンテーション
 description:
 permalink: /docs/
 ---
+
 <div class="container">
 
 {% include community_row.html
@@ -33,7 +34,7 @@ permalink: /docs/
    title="メディア"
    divId="media"
    content="ロゴとスタイルのガイド"
-   link_text="crystal-lang.org/media"
+   link_text="ja.crystal-lang.org/media"
    url="/media"
    icon="palette" %}
 
