feat: update translation

--- a/locale/ja/crystal-website/community/index.html
+++ b/locale/ja/crystal-website/community/index.html
@@ -2,139 +2,134 @@
 title: コミュニティ
 description: Crystal が成長する方法はたくさんあります。ここには主要なコミュニティの一覧があります。
 ---
-<div class="container">
+<div class="container">{% include community_row.html
+   title='セキュリティの問題'
+   divId='security'
+   content='何かセキュリティに関する問題を見つけても、issueトラッカーで<strong>オープンに公開しないでください</strong>。それらをトラックするためのメールボックスを用意しています。<br /><br />メッセージを <a href="https://keybase.io/crystal" target="_blank">Keybase</a> もしくは標準的な PGP (フィンガープリントは <code>5995 C83C D754 BE44 8164 1929 0961 7FD3 7CC0 6B54</code>) で暗号化できます。'
+   link_text='security@manas.tech'
+   url='mailto:security@manas.tech'
+   icon='security' %}
 
 {% include community_row.html
-   title="セキュリティの問題"
-   divId="security"
-   content="何かセキュリティに関する問題を見つけても、issueトラッカーで<strong>オープンに公開しないでください</strong>。それらの問題を追跡するためのメールボックスがあります。<br /><br />メッセージを <a href=\"https://keybase.io/crystal\" target=\"_blank\">Keybase</a> もしくは標準的な PGP (フィンガープリントは <code>5995 C83C D754 BE44 8164 1929 0961 7FD3 7CC0 6B54</code>) で暗号化できます。"
-   link_text="security@manas.tech"
-   url="mailto:security@manas.tech"
-   icon="security" %}
-
-{% include community_row.html
-   title="コードリポジトリ"
-   divId="code"
-   content="Crystal 公式のコードリポジトリは GitHub にありあす。言語や標準ライブラリにバグを発見した場合、ここに報告してください。Pull Request も受け付けています。"
-   link_text="crystal-lang/crystal"
-   url="https://github.com/crystal-lang/crystal/"
-   icon="github"
+   title='コードリポジトリ'
+   divId='code'
+   content='Crystal 公式のコードリポジトリは GitHub にありあす。言語や標準ライブラリにバグを発見した場合、ここに報告してください。Pull Request も受け付けています。'
+   link_text='crystal-lang/crystal'
+   url='https://github.com/crystal-lang/crystal/'
+   icon='github'
    custom_icon=true %}
 
 {% include community_row.html
-   title="フォーラム (英語)"
-   divId="discuss"
-   content="Crystal フォーラムは総合的な議論をする第一の場所です。気軽に質問してください。あなたのプロジェクトの紹介、ベストプラクティスの質問、どうやってプロジェクトに貢献したらよいか、その他 Crystal に関わることなら何でも OK です。"
-  link_text="forum.crystal-lang.org"
-  url="https://forum.crystal-lang.org"
-  icon="forum" %}
+   title='フォーラム (英語)'
+   divId='discuss'
+   content='Crystal フォーラムは総合的な議論をする第一の場所です。気軽に質問してください。あなたのプロジェクトの紹介、ベストプラクティスの質問、どうやってプロジェクトに貢献したらよいか、その他 Crystal に関わることなら何でも OK です。'
+  link_text='forum.crystal-lang.org'
+  url='https://forum.crystal-lang.org'
+  icon='forum' %}
 
 {% include community_row.html
-   title="新しいリリースやユースケースの紹介"
-   divId="blog"
-   content="Crystal 公式ブログでは、新しいリリースの詳細なアナウンス、興味深いユースケース、言語デザインの決定の背景、Crystal の開発チームの普段書いているコードについてなどが見れます。<br/><br/>ゲストからの投稿も受け付けています。もし Crystal で何か驚くものを作った場合は、<a href=\"mailto:crystal@manas.tech\" title=\"Or pick any other channel listed here\">私たちに連絡して</a>ください。あなたのことをブログで取り上げられることを楽しみにしています。"
-  link_text="Crystal ブログ"
-  url="/blog"
-  icon="chat_bubble_outline"
-  internal_link="true" %}
+   title='新しいリリースやユースケースの紹介'
+   divId='blog'
+   content='Crystal 公式ブログでは、新しいリリースの詳細なアナウンス、興味深いユースケース、言語デザインの決定の背景、Crystal の開発チームの普段書いているコードについてなどが見れます。<br/><br/>ゲストからの投稿も受け付けています。もし Crystal で何か驚くものを作った場合は、<a href="mailto:crystal@manas.tech" title="もしくはこのページの一覧から適切なところを選択してください">私たちに連絡してみて</a>ください。あなたのことをブログで取り上げられることを楽しみにしています。'
+  link_text='Crystal ブログ'
+  url='/blog'
+  icon='chat_bubble_outline'
+  internal_link='true' %}
 
 {% include community_row.html
-   title="チャットルーム (英語)"
-   divId="chat"
-   content="Gitter が Crystal 公式のチャットルームです。些細な疑問をここに投稿すればすぐに解答が返ってくるかもしれません。他にもガイダンスに関する質問をしたり、関心のある機能やプロジェクトの小さな議論をしたりできます。議論はまとまるように心がけてください。チャット欄が短かいと感じたらメーリングリストを使うことも検討してください。"
-   link_text="crystal-lang/crystal"
-   url="https://gitter.im/crystal-lang/crystal"
-   icon="gitter"
+   title='チャットルーム (英語)'
+   divId='chat'
+   content='Gitter が Crystal 公式のチャットルームです。些細な疑問をここに投稿すればすぐに解答が返ってくるかもしれません。他にもガイダンスに関する質問をしたり、関心のある機能やプロジェクトの小さな議論をしたりできます。議論はまとまるように心がけてください。チャット欄が短かいと感じたらメーリングリストを使うことも検討してください。'
+   link_text='crystal-lang/crystal'
+   url='https://gitter.im/crystal-lang/crystal'
+   icon='gitter'
    continues=true
    custom_icon=true %}
 
-{% include community_row.html title=""
-   content="IRC の方が手軽な場合は、irc.freenode.net につながっている <a href=\"http://irclog.crystal-lang.org\">irclog.crystal-lang.org</a> が Gitter にブリッジされています。ここに送ったものは Gitter にも転送されます。"
-   link_text="#crystal-lang"
-   url="https://webchat.freenode.net/?channels=%23crystal-lang"
-   icon="web_asset" %}
+{% include community_row.html title=''
+   content='IRC の方が手軽な場合は、irc.freenode.net につながっている <a href="http://irclog.crystal-lang.org">irclog.crystal-lang.org</a> が Gitter にブリッジされています。ここに送ったものは Gitter にも転送されます。'
+   link_text='#crystal-lang'
+   url='https://webchat.freenode.net/?channels=%23crystal-lang'
+   icon='web_asset' %}
 
 {% include community_row.html
-   title="総合的なアナウンスやイベントの通知"
-   divId="twitter"
-   content="Twitter アカウントは総合的なリリースのアナウンスや、興味深い記事のリツイートをします。Crystal について呟やいたときは是非このアカウントにメンションをしてみてください。"
-   link_text="@CrystalLanguage"
-   url="https://twitter.com/CrystalLanguage"
-   icon="twitter"
+   title='総合的なアナウンスやイベントの通知'
+   divId='twitter'
+   content='Twitter アカウントは総合的なリリースのアナウンスや、興味深い記事のリツイートをします。Crystal についてツイートしたときは是非このアカウントにメンションをしてみてください。'
+   link_text='@CrystalLanguage'
+   url='https://twitter.com/CrystalLanguage'
+   icon='twitter'
    custom_icon=true %}
 
 {% include community_row.html
-   title="作ったものを共有"
-   divId="reddit"
-   content="Crystal Programming サブ reddit は新しいリリースのアナウンスや興味深いライブラリ、ブログ記事があり、そしてあなたの作ったものを Crystal コミュニティに発信するのに最適な場所です。"
-   link_text="Crystal Programming"
-   url="https://www.reddit.com/r/crystal_programming/"
-   icon="reddit"
+   title='作ったものを共有'
+   divId='reddit'
+   content='Crystal Programming サブ reddit は新しいリリースのアナウンスや興味深いライブラリ、ブログ記事があり、そしてあなたの作ったものを Crystal コミュニティに発信するのに最適な場所です。'
+   link_text='Crystal Programming'
+   url='https://www.reddit.com/r/crystal_programming/'
+   icon='reddit'
    custom_icon=true %}
 
 {% include community_row.html
-   title="質問"
-   divId="stackoverflow"
-   content="もちろん、crystal-lang タグは StackOverflow にあります。Crystal プロジェクトの助けを求めたり、他の人の解決を手伝ったりできます。"
-   link_text="crystal-lang"
-   url="https://stackoverflow.com/questions/tagged/crystal-lang?sort=newest"
-   icon="stack_overflow"
+   title='質問'
+   divId='stackoverflow'
+   content='もちろん、crystal-lang タグは StackOverflow にあります。Crystal プロジェクトの助けを求めたり、他の人の解決を手伝ったりできます。'
+   link_text='crystal-lang'
+   url='https://stackoverflow.com/questions/tagged/crystal-lang?sort=newest'
+   icon='stack_overflow'
    custom_icon=true %}
 
 {% include community_row.html
-   title="Crystal の shards、ツール、チュートリアル"
-   divId="shards"
-   content="awesome リストの伝統に従って、awesome-crystal という GitHub リポジトリが Crystal の shards やツール、チュートリアルのキュレーテッドリストになっています。このリストにあなたのCrystalへの貢献を追加したい場合は、リポジトリを fork して、リストにそれを追加して Pull Request を送ってください。"
-   link_text="awesome-crystal"
-   url="https://github.com/veelenga/awesome-crystal"
-   icon="awesome"
+   title='Crystal の shards、ツール、チュートリアル'
+   divId='shards'
+   content='awesome リストの伝統に従って、awesome-crystal という GitHub リポジトリが Crystal の shards やツール、チュートリアルのキュレーテッドリストになっています。このリストにあなたのCrystalへの貢献を追加したい場合は、リポジトリを fork して、リストにそれを追加して Pull Request を送ってください。'
+   link_text='awesome-crystal'
+   url='https://github.com/veelenga/awesome-crystal'
+   icon='awesome'
    continues=true
    custom_icon=true %}
 
 {% include community_row.html
-   title=""
-   divId="shardbox"
-   content="Crystal shardsのデータベース。開発者が shards や shards のエコシステムを探すのを手助けします。"
-   link_text="Shardbox.org"
-   url="https://shardbox.org/"
+   title=''
+   divId='shardbox'
+   content='Crystal shardsのデータベース。開発者が shards や shards のエコシステムを探すのを手助けします。'
+   link_text='Shardbox.org'
+   url='https://shardbox.org/'
    continues=true
-   icon="play_arrow" %}
+   icon='play_arrow' %}
 
 {% include community_row.html
-   title=""
-   content="Crystal コードを含む GitHub リポジトリの一覧です。依存関係やリリースも確認できます。"
-   link_text="shards.info"
-   url="http://shards.info/"
+   title=''
+   content='Crystal コードを含む GitHub リポジトリの一覧です。依存関係やリリースも確認できます。'
+   link_text='shards.info'
+   url='http://shards.info/'
    continues=true
-   icon="play_arrow" %}
+   icon='play_arrow' %}
 
 {% include community_row.html
-   title=""
-   content="crystalshards.xyz は要約されていない Crystal コードを含む GitHub リポジトリの一覧です。検索機能があり、探している shards やアプリケーションを見つけられます。"
-   link_text="crystalshards.xyz"
-   url="https://crystalshards.xyz"
-   icon="play_arrow" %}
+   title=''
+   content='crystalshards.xyz は要約されていない Crystal コードを含む GitHub リポジトリの一覧です。検索機能があり、探している shards やアプリケーションを見つけられます。'
+   link_text='crystalshards.xyz'
+   url='https://crystalshards.xyz'
+   icon='play_arrow' %}
 
 {% include community_row.html
-   title="ニュースレター (英語)"
-   divId="newsletter"
-   content="Crystal Weekly は毎週の Crystal コミュニティの出来事の要約して、ニュースレターとして配信します。Web 上で購読できて、過去の記事も確認できます。"
-   link_text="Crystal Weekly"
-   url="http://www.crystalweekly.com/"
-   icon="mail_outline" %}
+   title='ニュースレター (英語)'
+   divId='newsletter'
+   content='Crystal Weekly は毎週の Crystal コミュニティの出来事の要約して、ニュースレターとして配信します。Web 上で購読できて、過去の記事も確認できます。'
+   link_text='Crystal Weekly'
+   url='http://www.crystalweekly.com/'
+   icon='mail_outline' %}
 
 {% capture events_ical_url %}https://calendar.google.com/calendar/ical/{{ site.google_calendar_id | uri_escape }}/public/basic.ics{% endcapture %}
 
 {% include community_row.html
-   title="イベント"
-   divId="events"
-   content="世界中の複数の都市で継続的に開催されている Crystal ミートアップや、オンラインミートアップ、プログラミングカンファレンスでの Crystal プレゼンテーションなど、Rubyconf の近くで Crystal のトークを見つけられる可能性が高いです。あなたの住む場所でのイベントを心待ちにしていてください。
-          <div id=\"calendar\"></div>"
-   link_text="Crystal イベントカレンダー"
+   title='イベント'
+   divId='events'
+   content='世界中の複数の都市で継続的に開催されている Crystal ミートアップや、オンラインミートアップ、プログラミングカンファレンスでの Crystal プレゼンテーションなど、Rubyconf の近くで Crystal のトークを見つけられる可能性が高いです。あなたの住む場所でのイベントを心待ちにしていてください。<div id="calendar"></div>'
+   link_text='Crystal イベントカレンダー'
    url=events_ical_url
-   icon="today" %}
-
-</div>
+   icon='today' %}</div>
 
 <link rel='stylesheet' href='/stylesheets/fullcalendar.css' />
 <script src="/javascripts/fullcalendar-3.1.0/lib/moment.min.js"></script>
