--- a/locale/ja/crystal-website/docs.html
+++ b/locale/ja/crystal-website/docs.html
@@ -3,55 +3,51 @@ title: ドキュメンテーション
 description:
 permalink: /docs/
 ---
-
-<div class="container">
-
-{% include community_row.html
-   title="言語リファレンス"
-   divId="language-reference"
-   content="Crystal の言語機能とコンパイラのリファレンス"
-   link_text="ja.crystal-lang.org/reference"
-   url="/reference"
-   icon="menu_book" %}
+<div class="container">{% include community_row.html
+   title='言語リファレンス'
+   divId='language-reference'
+   content='Crystal の言語機能とコンパイラのリファレンス'
+   link_text='ja.crystal-lang.org/reference'
+   url='/reference'
+   icon='menu_book' %}
 
 {% include community_row.html
-   title="API ドキュメント"
-   divId="api"
-   content="Crystal の標準ライブラリのドキュメント (英語)"
-   link_text="crystal-lang.org/api"
-   url="https://crystal-lang.org/api"
-   icon="explore" %}
+   title='API ドキュメント'
+   divId='api'
+   content='Crystal の標準ライブラリのドキュメント (英語)'
+   link_text='crystal-lang.org/api'
+   url='https://crystal-lang.org/api'
+   icon='explore' %}
 
 {% include community_row.html
-   title="インストール方法"
-   divId="install"
-   content="Crystalのインストール方法"
-   link_text="ja.crystal-lang.org/install"
-   url="/install"
-   icon="get_app" %}
+   title='インストール方法'
+   divId='install'
+   content='Crystalのインストール方法'
+   link_text='ja.crystal-lang.org/install'
+   url='/install'
+   icon='get_app' %}
 
 {% include community_row.html
-   title="メディア"
-   divId="media"
-   content="ロゴとスタイルのガイド"
-   link_text="ja.crystal-lang.org/media"
-   url="/media"
-   icon="palette" %}
+   title='メディア'
+   divId='media'
+   content='ロゴとスタイルのガイド'
+   link_text='ja.crystal-lang.org/media'
+   url='/media'
+   icon='palette' %}
 
 {% include community_row.html
-   title="開発者 Wiki (英語)"
-   divId="developer-wiki"
-   content="開発者向けの情報"
-   link_text="GitHub Wiki"
-   url="https://github.com/crystal-lang/crystal/wiki"
-   icon="github"
-   custom_icon="true" %}
+   title='開発者 Wiki (英語)'
+   divId='developer-wiki'
+   content='開発者向けの情報'
+   link_text='GitHub Wiki'
+   url='https://github.com/crystal-lang/crystal/wiki'
+   icon='github'
+   custom_icon='true' %}
 
 {% include community_row.html
-   title="Shards のドキュメント"
-   divId="shards"
-   content="公式 Shards のドキュメント"
-   link_text="crystal-db"
-   url="http://crystal-lang.github.io/crystal-db/api/latest/"
-   icon="apps" %}
-</div>
+   title='Shards のドキュメント'
+   divId='shards'
+   content='公式 Shards のドキュメント'
+   link_text='crystal-db'
+   url='http://crystal-lang.github.io/crystal-db/api/latest/'
+   icon='apps' %}
