fix: update some translations

--- a/locale/ja/crystal-website/docs.html
+++ b/locale/ja/crystal-website/docs.html
@@ -1,5 +1,5 @@
 ---
-title: ドキュメンテーション
+title: ドキュメント
 description:
 permalink: /docs/
 ---
@@ -45,9 +45,9 @@ permalink: /docs/
    custom_icon='true' %}
 
 {% include community_row.html
-   title='Shards のドキュメント'
+   title='shards のドキュメント'
    divId='shards'
-   content='公式 Shards のドキュメント'
+   content='公式 shards のドキュメント'
    link_text='crystal-db'
    url='http://crystal-lang.github.io/crystal-db/api/latest/'
    icon='apps' %}
