--- a/locale/ja/crystal-website/install/index.html
+++ b/locale/ja/crystal-website/install/index.html
@@ -7,7 +7,7 @@ permalink: /install/
 <div class="container">
   <div class="row">
     <div class="col offset-m1 m10 s12">
-      <div class="distro-list">{% for item in site.data.install %}<div><a href="{{ item.url }}"> <span class="distro-icon"> <img src="{{ item.icon | asset_path }}"> </span> {{item.caption}} </a></div>{% endfor %}</div>
+      <div class="distro-list">{% for item in site.data.install %}<div><a href="{{ item.url }}"><div class="distro-icon"><img src="{{ item.icon | asset_path }}"></div>{{item.caption}} </a></div>{% endfor %}</div>
     </div>
   </div>
 </div><br /><hr class="hr-light">
