fix: update data

--- a/locale/ja/crystal-website/index.html
+++ b/locale/ja/crystal-website/index.html
@@ -95,7 +95,7 @@ custom_body_classes:
 
   <div class="row">
     <div class="col s12">
-      <div class='sponsors-list'><a href='https://manas.tech/' target='_blank' class="sponsor"> {% img manas-orange.svg %} <span class="small">Manas Technology Solutions</span> </a> <a href='https://www.84codes.com/' target='_blank' class="sponsor"> {% img sponsors/84.png %} <span class="small">84 codes</span> </a> <a href='https://nikolamotor.com/' target='_blank' class="sponsor"> {% img sponsors/nikola_motor_company.png %} <span class="small">Nikola Motor Company</span> </a> <a href='https://fly.io' target='_blank' class="sponsor"> {% img sponsors/fly_io_.png %} <span class="small">Fly.io</span> </a></div>
+      <div class='sponsors-list'><a href='https://manas.tech/' target='_blank' class="sponsor"> {% img manas-orange.svg %} <span class="small">Manas Technology Solutions</span> </a> <a href='https://www.84codes.com/' target='_blank' class="sponsor"> {% img sponsors/84.png %} <span class="small">84 codes</span> </a> <a href='https://nikolamotor.com/' target='_blank' class="sponsor"> {% img sponsors/nikola_motor_company.png %} <span class="small">Nikola Motor Company</span> </a></div>
     </div>
   </div>
   <hr class="fullwidth">
