fix(website): typo

--- a/locale/ja/crystal-website/index.html
+++ b/locale/ja/crystal-website/index.html
@@ -34,7 +34,7 @@ custom_body_classes:
       <h2>型システム</h2>
       <p>Crystal は静的に型チェックされるプログラミング言語です。そのため、実行時にエラーを起こすのではなく、コンパイラが早期に型エラーを発見するでしょう。さらに、Crystal は型推論も備えています。ほとんどの場合、型注釈は必要ありません。</p>
       <div class="code_section">{% include sample_type_system.md %}</div>
-      <p class="read-more"><a href="https://ja.crystal-lang.org/reference/syntax_and_semantics/types_and_methods.html">Crystal の方システムについて、より詳しく見る</a></p>
+      <p class="read-more"><a href="https://ja.crystal-lang.org/reference/syntax_and_semantics/types_and_methods.html">Crystal の型システムについて、より詳しく見る</a></p>
     </div>
   </div>
 
