Add a newline after index.html header

--- a/locale/ja/crystal-website/index.html
+++ b/locale/ja/crystal-website/index.html
@@ -3,7 +3,9 @@ title: Crystal
 description: Livestreamed on 8 July 2021 – 4pm–8pm UTC
 custom_body_classes:
 - main
----<div class="banner center sponsorship no-select">
+---
+
+<div class="banner center sponsorship no-select">
   <div class="flag">さらなる成長のために支援をお願いします:<div class="flag-logos"><a href="https://opencollective.com/crystal-lang" target="_blank"> <img src="{{ 'oc.png' | asset_path }}" class="oc-logo"> </a></div>
   </div>
 </div>
