deploy: 2abedcf32b2deec4fc677305fb5051fc3e25455b

--- a/install/from_sources/index.html
+++ b/install/from_sources/index.html
@@ -150,7 +150,7 @@
     <p><a href="/install">最新のリリースの Crystal をインストールしてください</a>。Crystal をコンパイルするには、Crystal 自身が必要なのです。</p>
   </li>
   <li>
-    <p>サポートしているバージョンの LLVM にパスが通っているか確認してください。可能なら、サポートしている最新のバージョン 8.0 の LLVM を使ってください。</p>
+    <p>サポートしているバージョンの LLVM にパスが通っているか確認してください。When possible, use <a href="https://github.com/crystal-lang/crystal/blob/master/src/llvm/ext/llvm-versions.txt">the latest supported version</a>.</p>
   </li>
   <li>
     <p>そして、<a href="https://github.com/crystal-lang/crystal/wiki/All-required-libraries">すべての必要なライブラリ (英語)</a> がインストールされていることを確認してください。また、<a href="https://github.com/crystal-lang/crystal/blob/master/CONTRIBUTING.md">コントリビューションガイド (英語)</a> にも目を通しておくとよいでしょう。</p>
